# diffvg-torch

./: .gitignore  README.md  pyproject.toml
diffvg_torch/: __init__.py  io.py  render.py  render_batch.py  scene.py  svg.py
diffvg_triton/: __init__.py  render.py  render_batch.py  scene.py  svg.py
diffvg_triton/kernels/: distance.py
examples/: mnist_vae.py  refine_svg.py  train_vae_comparison.py  vqvae_train.py
tests/: test_cairo_parity.py
tests/benchmarking/: benchmark.py
tests/parity/: __init__.py  compare_parity_results.py  cross_validation.py  debug_open_stroke.py  debug_stroke_render.py  debug_winding.py  end_to_end_parity.py  minimal_grad_comparison.py  mnist_parity_test_torch.py  render_diagnostic_torch.py  test_parity.py  test_render.py  vae_parity_test.py  visual_compare.py
tests/parity_report/: PARITY_REPORT.md
