[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "diffvg-torch"
version = "0.1.0"
description = "Fast differentiable vector graphics rendering using PyTorch"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Carter McClellan"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics",
]
keywords = ["differentiable-rendering", "vector-graphics", "pytorch", "deep-learning"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pillow>=9.0.0",
]
examples = [
    "pillow>=9.0.0",
    "torchvision>=0.15.0",
]
all = [
    "diffvg-torch[dev,examples]",
]

[project.urls]
Homepage = "https://github.com/CarterMcClellan/diffvg-torch"
Repository = "https://github.com/CarterMcClellan/diffvg-torch"
Issues = "https://github.com/CarterMcClellan/diffvg-torch/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["diffvg_torch*"]
exclude = ["tests*", "examples*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
